# cours-de-C

./: .gitignore  Readme.md  arbre.c  cours1.c  cours1.h
C/: cours1.c  cours1.h
C/TD/: TD2.c  TD3.c
C/TP1/: bissextile.c  essai1.c  essai2.c  fct.c  mystere.txt  pointeur.c  puissance4.c  tortue.c  trie-bulle.c  (+1 more)
TP1/: bissextile2.c  core  double-boucle.c  fct  fct.c  hist  pile  pointeur  puissance4  puissance4.c  test.txt  tortue.c  toto.txt  toto1.txt  triangle  trie
TP1 Logique/: README-PICHENOT-REY.txt  addition-PICHENOT-REY.py  carte.sat  cartes-PICHENOT-REY.cnf  mult.sat  multiplication-PICHENOT-REY.py  question2-PICHENOT-REY.sat  reponce.txt  simplesat-PICHENOT-REY.py  simplesat-PICHENOT.py  solution.sol  sudoku.cnf  sudoku.sol  test.sat
Types abstraits/: CM.md
algo/: arbre.c  arbre.h
algo 2/: CM.md
algo numérique/: CM.md  CMn.md  Format CSR.md  fct cours.py  test.py
anglais/: FinalExam  TEDX.md  takeNotes.md
automates et grammaires/: Readme.md  TD3.md
kubernetes/: Readme.md
maths pour l'info/: CM.md  Prepa TP3.md
noSQL Graph/: .env  TP1.md  docker-compose.yml
poo/: TD.md  exo_test.java
projet/: Reu1_client_Users_stories.md  cours marty.md  note.md  noteReu4.md  requestBody.json  reu1.md  reu3.md  spec-eval.yml  sprint2.md
syncro process/: CM.md  TP.md
syncro process/col3-client-etu/: .gitignore  .gitmodules  Makefile.am  README.md  clientCOL3.c  clientCOL3.h  configure.ac  main.c
syncro process/col3-client-etu/col3-bibtp/: .gitignore  Makefile.am  README.md  communCOL3-TP.c  communCOL3-TP.h  configure.ac
systeme/: Readme.md
(+160 files in other folders)
