#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(libcol3tp, 2021.0)
AC_CONFIG_SRCDIR([communCOL3-TP.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11 foreign])
AM_SILENT_RULES([yes])
AC_PROG_RANLIB
AC_PROG_CC
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
